--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
- hi 
+<html>
+	<body>
+		hi 
+		<br />		<a href="page1.html">1</a>
+		<br />		<a href="page2.html">2</a>
+		<br />		<a href="page3.html">3</a>
+	</body>
+</html>
