--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		hi 
+		Hi Every One 
 		<br />		<a href="page1.html">1</a>
 		<br />		<a href="page2.html">2</a>
 		<br />		<a href="page3.html">3</a>
